...
                  <ImageContainer
                    source={require('../../../assets/images/Email-icon.png')}
                    style={styles.emailIconStyle}
                  />
                  <TextInput
                    style={styles.emailInputBox}
                    placeholder={'Email'}
                    value={email}
                    onChangeText={validateUserEmail}
                    returnKeyType="done"
                    placeholderTextColor="rgba(35, 35, 35, 0.4)"
                  />
                </View>
...
              </ErrorText>
            ) : (
              <View />
            )}
            <Spacer size={20} position="top">
              <PrimaryButton
                title="Continue"
                onPress={getOtpToVerifyEmail}
                isLoading={loading}
              />
            </Spacer>
          </ScrollView>
        </ScreenContainer>
...
